--- a/UI/requirements.txt
+++ b/UI/requirements.txt
@@ -1,208 +1,3 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-altair==5.3.0
-annotated-types==0.6.0
-anyio==4.3.0
-asgiref==3.8.1
-asttokens==2.4.1
-attrs==23.2.0
-backcall==0.2.0
-backoff==2.2.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.8.1
-build==1.2.1
-cachetools==5.3.3
-certifi==2024.2.2
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
-chromadb==0.5.0
-click==8.1.7
-colorama==0.4.6
-coloredlogs==15.0.1
-cryptography==42.0.5
-dataclasses-json==0.6.5
-decorator==5.1.1
-deepdiff==7.0.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-dnspython==2.6.1
-docopt==0.6.2
-email_validator==2.1.1
-emoji==2.11.1
-executing==2.0.1
-fastapi==0.111.0
-fastapi-cli==0.0.2
-fastjsonschema==2.19.1
-filelock==3.14.0
-filetype==1.2.0
-flatbuffers==24.3.25
-frozenlist==1.4.1
-fsspec==2024.3.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth==2.29.0
-googleapis-common-protos==1.63.0
-greenlet==3.0.3
-grpcio==1.63.0
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-huggingface==0.0.1
-huggingface-hub==0.23.0
-humanfriendly==10.0
-idna==3.7
-importlib-metadata==7.0.0
-importlib_resources==6.4.0
-intel-openmp==2021.4.0
-ipython==8.12.3
-jedi==0.19.1
-Jinja2==3.1.3
-joblib==1.4.2
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.4
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-kubernetes==29.0.0
-langchain==0.1.17
-langchain-community==0.0.36
-langchain-core==0.1.50
-langchain-text-splitters==0.0.1
-langdetect==1.0.9
-langsmith==0.1.53
-lxml==5.2.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.2
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.0.2
-mkl==2021.4.0
-mmh3==4.1.0
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.0.5
-mypy-extensions==1.0.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-networkx==3.3
-nltk==3.8.1
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.17.3
-opencv-python==4.9.0.80
-opentelemetry-api==1.24.0
-opentelemetry-exporter-otlp-proto-common==1.24.0
-opentelemetry-exporter-otlp-proto-grpc==1.24.0
-opentelemetry-instrumentation==0.45b0
-opentelemetry-instrumentation-asgi==0.45b0
-opentelemetry-instrumentation-fastapi==0.45b0
-opentelemetry-proto==1.24.0
-opentelemetry-sdk==1.24.0
-opentelemetry-semantic-conventions==0.45b0
-opentelemetry-util-http==0.45b0
-ordered-set==4.1.0
-orjson==3.10.2
-overrides==7.7.0
-packaging==23.2
-pandas==2.2.2
-pandocfilters==1.5.1
-parso==0.8.4
-pdf2image==1.17.0
-pdfminer.six==20231228
-pickleshare==0.7.5
-pillow==10.3.0
-pillow_heif==0.16.0
-pipreqs==0.5.0
-platformdirs==4.2.1
-poppler-utils==0.1.0
-posthog==3.5.0
-prompt-toolkit==3.0.43
-protobuf==4.25.3
-pure-eval==0.2.2
-pyarrow==16.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-pycryptodome==3.20.0
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydeck==0.9.0
-Pygments==2.17.2
-pypdf==4.2.0
-PyPDF2==3.0.1
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-pyreadline3==3.4.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-iso639==2024.4.27
-python-magic==0.4.27
-python-multipart==0.0.9
-pytz==2024.1
-pywin32==306
-PyYAML==6.0.1
-pyzmq==26.0.3
-rapidfuzz==3.9.0
-referencing==0.35.1
-regex==2024.4.28
-requests==2.31.0
-requests-oauthlib==2.0.0
-rich==13.7.1
-rpds-py==0.18.0
-rsa==4.9
-safetensors==0.4.3
-scikit-learn==1.4.2
-scipy==1.13.0
-sentence-transformers==2.7.0
-shellingham==1.5.4
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.5
-SQLAlchemy==2.0.29
-stack-data==0.6.3
-starlette==0.37.2
-streamlit==1.34.0
-sympy==1.12
-tabulate==0.9.0
-tbb==2021.12.0
-tenacity==8.2.3
-threadpoolctl==3.5.0
-tinycss2==1.3.0
-tokenizers==0.19.1
-toml==0.10.2
-toolz==0.12.1
-torch==2.3.0
-tornado==6.4
-tqdm==4.66.4
-traitlets==5.14.3
-transformers==4.40.1
-typer==0.12.3
-typing-inspect==0.9.0
-typing_extensions==4.11.0
-tzdata==2024.1
-ujson==5.9.0
-unstructured==0.13.6
-unstructured-client==0.22.0
-urllib3==2.2.1
-uvicorn==0.29.0
-watchdog==4.0.0
-watchfiles==0.21.0
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==12.0
-wrapt==1.16.0
-yarg==0.1.9
-yarl==1.9.4
-zipp==3.18.1
+version https://git-lfs.github.com/spec/v1
+oid sha256:bbd9a28dc42aa80e20bbf6929058a7327cff1e4ecebf67ebcb3816014b8383e1
+size 3901
